started creating the crud for tickets